# space-mission-sim-vis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  USER_MANUAL_UPDATES.md
.CI/: build_matrix.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: main-feature.md
.github/workflows/: build.yml  check-formatting.yml  test.yml
example_flights/: example1.fli
example_project/: README.txt  boulder_depth_dist.txt  boulder_model.txt  clean.bat  clean.sh  crater_age_dist.txt  crater_decay.txt  crater_model.txt  create_albedomap.txt  create_boulder_size_freq_dist.txt  create_boulders.txt  create_crater_size_freq.txt  create_craters.txt  create_surface.txt  make_model.bat  make_model.sh  model.txt  progl_view.sh  regions.txt  runme.bat  runme.sh  view.bat  view.sh
resources/: resources.qrc
resources/shaders/: FlightPath.frag  FlightPath.vert
src/: CMakeLists.txt  main.cpp
src/common/: CamPoint.cpp  CamPoint.hpp  HBoxLayout.cpp  HBoxLayout.hpp  MessageController.cpp  MessageController.hpp  PanguConnection.cpp  PanguConnection.hpp  PanguParser.cpp  PanguParser.hpp  PanguServerProcess.cpp  PanguServerProcess.hpp  PanguWorker.cpp  PanguWorker.hpp  ParseResult.cpp  ParseResult.hpp  ParsedCommand.cpp  ParsedCommand.hpp  PingWorker.cpp  PingWorker.hpp  PreviewWorker.cpp  PreviewWorker.hpp  Resources.cpp  Resources.hpp  VBoxLayout.cpp  VBoxLayout.hpp
src/common/settings/: GenericSetting.hpp  SettingManager.cpp  SettingManager.hpp  Settings.cpp  Settings.hpp
src/enums/: CommandErr.hpp  ConnectionErr.hpp  FileErr.hpp  FileMessage.hpp  FileQuestion.hpp
src/interfaces/: ICommandSender.hpp  IConnection.hpp  IDocument.hpp  IEditor.hpp  ILoadable.hpp  IPane.hpp  IParser.hpp  IPreview.hpp  IProcess.hpp  ISavable.hpp  ISavableLoadable.hpp  IServerProcess.hpp
src/util/: CommandUtil.cpp  CommandUtil.hpp  FileUtil.cpp  FileUtil.hpp  SocketUtil.cpp  SocketUtil.hpp  StringUtil.cpp  StringUtil.hpp  ThreadUtil.cpp  ThreadUtil.hpp  TimeUtil.cpp  TimeUtil.hpp
src/widgets/: Action.cpp  Action.hpp  CamPreview.cpp  CamPreview.hpp  ConnectionDisplay.cpp  ConnectionDisplay.hpp  CoordPreview.cpp  CoordPreview.hpp  CoordsPreview.cpp  CoordsPreview.hpp  CoordsVis.cpp  CoordsVis.hpp  Editor.cpp  Editor.hpp  LogsView.cpp  LogsView.hpp  MainWindow.cpp  MainWindow.hpp  MenuSeparator.cpp  MenuSeparator.hpp  PanguEditor.cpp  PanguEditor.hpp  PlaybackInterface.cpp  PlaybackInterface.hpp  ProgressBar.cpp  ProgressBar.hpp  RecentsMenu.cpp  RecentsMenu.hpp  SimPreview.cpp  SimPreview.hpp  VBoxLayout.hpp
src/widgets/dialogs/: AboutDialog.cpp  AboutDialog.hpp  Dialog.cpp  Dialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/widgets/settingspages/: CommandsPage.cpp  CommandsPage.hpp  CoordsVisPage.cpp  CoordsVisPage.hpp  EditorPage.cpp  EditorPage.hpp  ServerPage.cpp  ServerPage.hpp  SettingsPage.cpp  SettingsPage.hpp
tests/: CMakeLists.txt
tests/src/: CommandUtil.cpp  ExampleTest.cpp  FileUtil.cpp  PanguParser.cpp  SocketUtil.cpp  StringUtil.cpp  main.cpp
tools/: check-formatting.sh  clang-format-all.sh  clean.sh  install.sh  linuxdeployqt.sh  make.sh  run-tests.sh
